--- a/ccstyle.css
+++ b/ccstyle.css
@@ -58,12 +58,12 @@ nav{
 
 }
 
-#navi:hover {
+.navi:hover {
 
     background-color:red;
 }
 
-#navi a, #navi a:visited {
+.navi a, .navi a:visited {
 
     color:white;
 
@@ -107,7 +107,7 @@ label {
 
 }
 
-#naam {
+.info {
 
     color: grey;
     background: none;
@@ -117,88 +117,6 @@ label {
     margin: 6px 0;
     border: 1px solid #CCCCCC;
     border-radius: 4px;
-
-}
-
-#telefoonnummer {
-
-    color: grey;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
-
-}
-
-#email {
-
-    color: grey;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
-
-}
-
-#dd-mm-jjjj {
-
-    font-family: sans-serif;
-    color: grey;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
-
-}
-
-#tijd {
-
-    font-family: sans-serif;
-    color: grey;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
-
-}
-
-#personen {
-
-    color: grey;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
-
-}
-
-#opmerkingen {
-
-    color: grey;
-    width: 400px;
-    height: 100px;
-    background: none;
-    border: 1px solid #CCCCCC;
-    border-radius: 4px;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 6px 0;
 
 }
 
@@ -322,3 +240,4 @@ footer {
         width: 80vw;
     }
 }
+
